Improved layout  - Placed logo in the upper right corner  - Frame title in standard text colour  - Margin for title smaller  - Layout of the title page improved

--- a/beamercolorthemeemc.sty
+++ b/beamercolorthemeemc.sty
@@ -27,7 +27,7 @@
  \setbeamercolor{palette tertiary}{fg=emclblue, bg=emcdblue}
  \setbeamercolor{palette quaternary}{fg=emcdblue, bg=white}
  \setbeamercolor{structure}{fg=white, bg=emcdblue}
- \pgfdeclareimage[width=25mm]{fg:logo}{Logo1DB.pdf} 
+ \pgfdeclareimage[width=35mm]{fg:logo}{Logo1DB.pdf} 
  \pgfdeclareimage[width=1cm]{fg:logoNoText}{logo2NoTextDB.pdf} 
 }
 \newcommand{\@emc@colors@lightblue}{
@@ -36,7 +36,7 @@
  \setbeamercolor{palette tertiary}{fg=black, bg=white}
  \setbeamercolor{palette quaternary}{fg=emclblue, bg=emcdblue}
  \setbeamercolor{structure}{fg=emcdblue, bg=emclblue}
- \pgfdeclareimage[width=25mm]{fg:logo}{Logo1LB.pdf} 
+ \pgfdeclareimage[width=35mm]{fg:logo}{Logo1LB.pdf} 
  \pgfdeclareimage[width=1cm]{fg:logoNoText}{logo2NoTextLB.pdf}
 }
 \newcommand{\@emc@colors@white}{
@@ -45,7 +45,7 @@
  \setbeamercolor{palette tertiary}{fg=black, bg=emclblue}
  \setbeamercolor{palette quaternary}{fg=white, bg=emcdblue}
  \setbeamercolor{structure}{fg=emcdblue, bg=white}
- \pgfdeclareimage[width=25mm]{fg:logo}{Logo1.pdf} 
+ \pgfdeclareimage[width=35mm]{fg:logo}{Logo1.pdf} 
  \pgfdeclareimage[width=1cm]{fg:logoNoText}{logo2NoText.pdf}
 }
 
@@ -85,8 +85,8 @@
 \setbeamercolor{enumerate item}{use=palette tertiary,parent=palette tertiary}
 \setbeamercolor{description item}{use=palette tertiary,parent=palette tertiary}
 \setbeamercolor{frametitle}{%
-  use=palette tertiary,
-  parent=palette tertiary,
+  use=palette primary,
+  parent=palette primary,
   bg=
 }
 \setbeamercolor{palette sidebar primary}{use=normal text,fg=normal text.fg}
