Now using ProvidesPackage - The theme should be installable now

--- a/Mypresentation.tex
+++ b/Mypresentation.tex
@@ -2,7 +2,7 @@
 \usepackage{pgfkeys}
 \usepackage{pgfopts}
 \usepackage{babel}
-\usetheme[color/background=lightblue]{emc}
+\usetheme[color/background=white]{emc}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -68,7 +68,10 @@ This is an example of an example
        \end{exampleblock} 
       \begin{block}{A block}
         Block content.
-       \end{block} 
+       \end{block}        
+\begin{beamercolorbox}[wd=\linewidth,ht=2.5ex,dp=1.125ex,center]{palette secondary}
+Just a beamercolorbox
+\end{beamercolorbox}
            
 \end{frame}
 
