--- a/beamerthemeemc.sty
+++ b/beamerthemeemc.sty
@@ -1,8 +1,10 @@
+\ProvidesPackage{beamerthemeemc}[2016/02/27 EMC Beamer theme]
+
 \mode<presentation>
 
 \RequirePackage{tikz}
 \RequirePackage{pgfopts}
-\usepackage[absolute,overlay]{textpos} 
+\RequirePackage[absolute,overlay]{textpos} 
 \usetikzlibrary{calc}
 
 \newcommand{\emcset}[1]{\pgfkeys{/emc/.cd,#1}}
