--- a/beamerinnerthemeemc.sty
+++ b/beamerinnerthemeemc.sty
@@ -1,3 +1,6 @@
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{beamerinnerthemeemc}[2016/02/27 EMC Beamer theme]
+
 \mode<presentation>
 \setbeamertemplate{background}{
 \usebeamercolor{palette tertiary}%
