--- a/beamercolorthemeemc.sty
+++ b/beamercolorthemeemc.sty
@@ -9,6 +9,8 @@
 \definecolor{emcgrey}{RGB}{182,188,213}
 \definecolor{emcfadedblue}{RGB}{207,236,249}
 
+\setblockcolor{emclblue}
+\setbordercolor{white}
 
 \pgfkeys{
   /emc/color/background/.cd,
